k8s/stump/stump-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stump
  labels:
    name: stump
