k8s/stump/stump-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stump
  namespace: stump
  labels:
    app: stump
spec:
  serviceName: stump
  replicas: 1
  selector:
    matchLabels:
      app: stump
  template:
    metadata:
      labels:
        app: stump
      annotations:
        configmap.reloader.stakater.com/reload: "stump-config"
        secret.reloader.stakater.com/reload: "stump-app-secrets"
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      shareProcessNamespace: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: stump
          image: aaronleopold/stump:latest@sha256:a68507ed2a0713d2b6c100df73fe9be142aead75acec667585b518ee04c8978d
          ports:
            - name: http
              containerPort: 10801
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 500Mi
            limits:
              memory: 700Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: stump-data
              mountPath: /config
            - name: stump-manga
              mountPath: /data/manga
              readOnly: true
            - name: stump-comics
              mountPath: /data/comics
              readOnly: true
            - name: stump-ebooks
              mountPath: /data/ebooks
              readOnly: true
            - name: tmp
              mountPath: /tmp
            - name: root-cache
              mountPath: /root/.cache
          startupProbe:
            httpGet:
              path: /
              port: 10801
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: 10801
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 10801
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
      volumes:
        - name: stump-data
          persistentVolumeClaim:
            claimName: stump-data-pvc
        - name: stump-manga
          persistentVolumeClaim:
            claimName: stump-shared-manga-pvc
        - name: stump-comics
          persistentVolumeClaim:
            claimName: stump-shared-comics-pvc
        - name: stump-ebooks
          persistentVolumeClaim:
            claimName: stump-shared-ebooks-pvc
        - name: tmp
          emptyDir: {}
        - name: root-cache
          emptyDir: {}
